bin_PROGRAMS = pt_agent pt_sflow pt_netflow pt_thmon  

pt_agent_SOURCES = pt_agent.c pt_sock.c pt_pcap.c pt_snort.c pt_datalink.c pt_ip.c pt_ip6.c pt_tcp.c pt_udp.c pt_icmp.c pt_icmp6.c pt_iptbhash.c pt_mesg.c pt_send.c pt_util.c pt_init.c
pt_agent_LDADD = 
pt_agent_CFLAGS =   

pt_sflow_SOURCES = pt_sflow_agent.c pt_sflow.c pt_sflowd.c pt_sock.c pt_pcap.c pt_snort.c pt_datalink.c pt_ip.c pt_ip6.c pt_tcp.c pt_udp.c pt_icmp.c pt_icmp6.c pt_iptbhash.c pt_mesg.c pt_send.c pt_util.c pt_init.c
pt_sflow_LDADD = 
pt_sflow_CFLAGS =   

pt_netflow_SOURCES = pt_netflow_agent.c pt_netflow.c pt_netflowd.c pt_sock.c pt_pcap.c pt_snort.c pt_datalink.c pt_ip.c pt_ip6.c pt_tcp.c pt_udp.c pt_icmp.c pt_icmp6.c pt_iptbhash.c pt_mesg.c pt_send.c pt_util.c pt_init.c
pt_netflow_LDADD = 
pt_netflow_CFLAGS =   


pt_thmon_SOURCES = pt_thmon.c pt_iptbhash.c pt_hash.c pt_util.c
pt_thmon_LDADD =
pt_thmon_CFLAGS =   
